--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,9 +15,6 @@
     <li>
       <a href="#" data-toggle="modal" data-target="#request-modal">Request</a>
     </li>
-    <li>
-      <a href="#" data-toggle="modal" data-target="#feedback-modal">Feedback</a>
-    </li>
     <li><%= link_to "Random", "/random" %></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
@@ -43,7 +40,7 @@
 
   <div id="footer">
     <div class="container" style="height:30px;">
-      <p style="padding-top:5px">Not affiliated with Westmont College. <a href="https://github.com/XanderStrike/movie-browser/">Github</a>. <a href="#">Feedback</a>. <%= link_to "About", "/about" %>.</p>
+      <p style="padding-top:5px">Not affiliated with Westmont College. <a href="https://github.com/XanderStrike/movie-browser/">Github</a>. <a href="#" data-toggle="modal" data-target="#feedback-modal">Feedback</a>. <%= link_to "About", "/about" %>.</p>
     </div>
   </div>
 
