--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
       <div class="row genre-row">
         <% slice.each do |movie| %>
         <div class="col-md-2 col-xs-4 movie-cell" >
-        <%= link_to image_tag("/img/posters/#{ movie.id }.jpg", class: 'movie-thumb'), "/watch/#{ movie.id }" %>
+        <%= link_to image_tag("/img/posters/#{ movie.id }.jpg", class: 'movie-thumb'), "/view/#{ movie.id }" %>
           <span class="play"></span>
           <%= link_to movie.title, "/view/#{movie.id}" %>
         </div>
@@ -23,7 +23,7 @@
   </div>
   <% recent.each do |movie| %>
     <div class="col-md-2 movie-cell">
-      <%= link_to image_tag("/img/posters/#{ movie.id }.jpg", class: 'movie-thumb'), "/watch/#{ movie.id }" %>
+      <%= link_to image_tag("/img/posters/#{ movie.id }.jpg", class: 'movie-thumb'), "/view/#{ movie.id }" %>
       <%= link_to movie.title, "/view/#{movie.id}" %>
     </div>
   <% end %>
@@ -35,7 +35,7 @@
   </div>
   <% random.each do |movie| %>
     <div class="col-md-2 movie-cell">
-      <%= link_to image_tag("/img/posters/#{ movie.id }.jpg", class: 'movie-thumb'), "/watch/#{ movie.id }" %>
+      <%= link_to image_tag("/img/posters/#{ movie.id }.jpg", class: 'movie-thumb'), "/view/#{ movie.id }" %>
       <%= link_to movie.title, "/view/#{movie.id}" %>
     </div>
   <% end %>
