--- a/views/show_movie.erb
+++ b/views/show_movie.erb
@@ -2,7 +2,7 @@
 
 <div class="vid-container" style="background: url(<%= get_link "/img/backdrops/#{movie.id}.jpg" %>);background-size:cover;">
   <video id="player" poster="<%= get_link("/img/transparent.png") %>" controls>
-  <source src="<%= get_link("/library/#{movie.filename}") %>">
+  <source src="<%= get_link("/movies/#{movie.filename}") %>">
   </video>
 </div>
 
