--- a/views/show_tv.erb
+++ b/views/show_tv.erb
@@ -1,4 +1,3 @@
-
 <div class="row movie" style="padding-top:20px;">
   <div class="col-md-3">
     <%= image_tag "/img/posters/#{ show.id }.jpg", style: "width:100%" %>
@@ -29,9 +28,60 @@
             <td>
               <a href="https://www.themoviedb.org/tv/<%= show.id %>"><%= image_tag "/img/button-tmdb.png" %></a>
             </td>
+            <td>
+            </td>
           </tr>
         </table>
       </div>
     </div>
   </div>
 </div>
+
+<div class="row movie" style="padding-top:30px;" id="player-div">
+  <div class="col-md-12">
+    <legend>Player <span id="p-filename" class="sublegend"></span></legend>
+    <div class="vid-container" style="background: url(<%= get_link "/img/backdrops/#{show.id}.jpg" %>);background-size:cover;">
+      <video id="player" poster="<%= get_link("/img/transparent.png") %>" controls>
+      <source src="">
+      </video>
+    </div>
+    <p id="p-link" style="display:none">Video not playing? Download the file <a id='direct-link' href="">here</a>.</p>
+    <p id="p-select">Select an episode from below to view.</p>
+  </div
+</div>
+
+<div class="row movie" style="padding-top:30px;">
+  <div class="col-md-12">
+    <legend>Episodes Available</legend>
+    <div class="panel-group" id="accordion">
+      <% @seasons.keys.sort.each do |f|%>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-<%= f %>"><%= f %></a>
+            </h4>
+          </div>
+          <div id="collapse-<%= f %>" class="panel-collapse collapse">
+            <div class="panel-body">
+              <% @seasons[f].each do |file| %>
+                <p><a href="#player-div" onClick="set_player('<%= get_link file %>')"><%= file.split("/").last %></a></p>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+
+<script>
+  function set_player (link) {
+    document.querySelector("#player > source").src = link;
+    document.getElementById('direct-link').href = link;
+    $('#p-filename').html(link);
+    $('#p-link').show();
+    $('#p-select').hide();
+    document.getElementById('player').load();
+  }
+</script>
