--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,6 +16,7 @@
       <a href="#" data-toggle="modal" data-target="#request-modal">Request</a>
     </li>
     <li><%= link_to "Random", "/random" %></li>
+    <li><%= link_to "TV", "/tv" %></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
       <ul class="dropdown-menu">
