--- a/views/feedback.erb
+++ b/views/feedback.erb
@@ -1,20 +1,5 @@
-<h1>Feedback</h1>
-
-<table class='table'>
-  <thead>
-    <tr>
-      <th width=20%>User</th>
-      <th width=70%>Feedback</th>
-      <th width=10%>Status</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% feedback.each do |f| %>
-      <tr>
-        <td><%= f[0] %></td>
-        <td><%= f[1] %></td>
-        <td><%= f[2] %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="jumbotron" style="margin-top:100px;">
+  <h1>Thanks <%= name %>!</h1>
+  <p>Your feedback has been received. Maybe I'll get right on that. No promises though.<p>
+  <%= link_to "Go Back", "/", class: "btn btn-primary btn-lg" %>
+</div>
