--- a/views/show_movie.erb
+++ b/views/show_movie.erb
@@ -6,7 +6,7 @@
   </video>
 </div>
 
-<% if info.audio[0].format == "AC-3" %>
+<% if ["AC-3", "DTS"].include?(info.audio[0].format) %>
 <div class="alert alert-warning alert-dismissable">
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <strong>FYI!</strong> The audio track of this video is not compatible with HTML5. If you can't unmute the audio in the player above, you'll have to click the direct link down below.
