--- a/views/show_tv.erb
+++ b/views/show_tv.erb
@@ -1,6 +1,6 @@
 <div class="row movie" style="padding-top:20px;">
   <div class="col-md-3">
-    <%= image_tag "/img/posters/#{ show.id }.jpg", style: "width:100%" %>
+    <%= image_tag "/img/posters/tv_#{ show.id }.jpg", style: "width:100%" %>
   </div>
   <div class="col-md-9">
     <legend id="title"><%= show.title %> <span class="sublegend"><%= show.filename %></span></legend>
@@ -41,7 +41,7 @@
 <div class="row movie" style="padding-top:30px;" id="player-div">
   <div class="col-md-12">
     <legend>Player <span id="p-filename" class="sublegend"></span></legend>
-    <div class="vid-container" style="background: url(<%= get_link "/img/backdrops/#{show.id}.jpg" %>);background-size:cover;">
+    <div class="vid-container" style="background: url(<%= get_link "/img/backdrops/tv_#{show.id}.jpg" %>);background-size:cover;">
       <video id="player" poster="<%= get_link("/img/transparent.png") %>" controls>
       <source src="">
       </video>
