--- a/views/show_movie.erb
+++ b/views/show_movie.erb
@@ -52,6 +52,20 @@
   </div>
 </div>
 
+<% unless @related.count < 1 %>
+<div class="row" style="padding-top:30px;">
+  <div class="col-md-12">
+    <legend>Similar Movies</legend>
+  </div>
+  <% @related[0...6].each do |movie| %>
+    <div class="col-md-2 movie-cell">
+      <%= link_to image_tag("/img/posters/#{ movie.id }.jpg", class: 'movie-thumb'), "/view/#{ movie.id }" %>
+      <%= link_to movie.title, "/view/#{ movie.id }" %>
+    </div>
+  <% end %>
+</div>
+<% end %>
+
 <div class="row">
   <div class="col-md-6">
     <h3>File Information</h3>
