--- a/views/show_movie.erb
+++ b/views/show_movie.erb
@@ -1,11 +1,13 @@
 <legend id="title"><%= @movie.title %> <span class="sublegend"><%= @movie.filename %></span></legend>
 
+<!--
 <div class="vid-container" style="background: url(<%= get_link "/img/backdrops/#{@movie.id}.jpg" %>);background-size:cover;">
   <video id="player" poster="<%= get_link("/img/transparent.png") %>" controls>
   <source src="<%= get_link("/movies/#{@movie.filename}") %>">
   </video>
 </div>
 <p>Video not playing properly? Try switching to a <a href="#player-div" onClick="switch_local_player()">local player</a>, or download the file <%= link_to "here", "/watch/#{ @movie.id }" %>.</p>
+-->
 
 <div class="row movie" style="padding-top:20px;">
   <div class="col-md-3">
@@ -57,7 +59,7 @@
   <div class="col-md-12">
     <legend>Similar Movies</legend>
   </div>
-  <% @related[0...6].each do |movie| %>
+  <% @related.each do |movie| %>
     <div class="col-md-2 movie-cell">
       <%= link_to image_tag("/img/posters/#{ movie.id }.jpg", class: 'movie-thumb'), "/view/#{ movie.id }" %>
       <%= link_to movie.title, "/view/#{ movie.id }" %>
