--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,6 +17,7 @@
     </li>
     <li><%= link_to "Random", "/random" %></li>
     <li><%= link_to "TV", "/tv" %></li>
+    <li><%= link_to "Music", "/listen" %></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
       <ul class="dropdown-menu">
