add proper imdb and tmdb links

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -39,10 +39,10 @@
           </tr>
           <tr>
             <td>
-              <a href="http://www.imdb.com/title/<%= @movie.imdb_id %>/"><%= image_tag "/img/button-imdb.png" %></a>
+              <a href="http://www.imdb.com/title/<%= @movie.imdb_id %>/"><%= image_tag "button-imdb.png" %></a>
             </td>
             <td>
-              <a href="https://www.themoviedb.org/movie/<%= @movie.id %>"><%= image_tag "/img/button-tmdb.png" %></a>
+              <a href="https://www.themoviedb.org/movie/<%= @movie.id %>"><%= image_tag "button-tmdb.png" %></a>
             </td>
           </tr>
         </table>
