--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,10 @@
 
   <div class="container">
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <%= link_to "CAKETOP THEATER", '/', class: "navbar-brand" %>
+      <%= link_to "CAKETOP THEATER", '/theater', class: "navbar-brand" %>
       <ul class="nav navbar-nav navbar-right" style="padding-right: 10px;">
-        <li><%= link_to "Home", "/" %></li>
+        <li><%= link_to "Home", '/theater' %></li>
+        <li><%= link_to "Movies", movies_path %></li>
       </ul>
     </nav>
 
