--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,9 +1,9 @@
 <legend id="title"><%= @movie.title %> <span class="sublegend"><%= @movie.filename %></span></legend>
 
 <div class="vid-container" style="background: url(<%= asset_path @movie.backdrop %>);background-size:cover;">
-  <!-- <video id="player" poster="" controls>
-  <source src="">
-  </video> -->
+  <video id="player" poster="<%= asset_path 'transparent.png' %>" controls>
+  <source src="/theater/movies/<%= @movie.filename %>">
+  </video>
 </div>
 <p>Video not playing properly? Try switching to a <a href="#player-div" onClick="switch_local_player()">local player</a>, or download the file <%= link_to "here", "/watch/#{ @movie.id }" %>.</p>
 
@@ -51,3 +51,11 @@
     <%= link_to "Direct Link", "/watch/#{ @movie.id }" %>
   </div>
 </div>
+
+
+
+<script>
+  function switch_local_player() {
+    $('.vid-container').html("<embed src='/theater/movies/<%= @movie.filename %>' autoplay=true width='100%' height='100%'></embed>");
+  }
+</script>
