--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -11,8 +11,10 @@
 }
 
 .movie-thumb {
+  margin-bottom:10px;
+  padding-bottom:0px;
   width: 100%;
-  padding-bottom:10px;
+  box-shadow:0px 0px 10px #666;
 }
 
 .genre-row {
@@ -29,4 +31,9 @@
 video {
   width:100%;
   height:100%;
+}
+
+.sublegend {
+  color: #bbb;
+  font-size: 11px;
 }
