--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <li><%= link_to "Home", '/theater' %></li>
         <li><%= link_to "Movies", movies_path %></li>
          <li>
-          <%= form_tag('/movies/search', class: 'navbar-form', role: 'search') do %>
+          <%= form_tag(movies_search_path, class: 'navbar-form', role: 'search') do %>
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search Movies" name="q">
             </div>
