--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
       <%= link_to "CAKETOP THEATER", '/theater', class: "navbar-brand" %>
       <ul class="nav navbar-nav navbar-right" style="padding-right: 10px;">
         <li><%= link_to "Home", '/theater' %></li>
-        <li><%= link_to "Movies", movies_path %></li>
+        <li><%= link_to "Films", movies_path %></li>
          <li>
           <%= form_tag(movies_search_path, class: 'navbar-form', role: 'search') do %>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search Movies" name="q">
+              <input type="text" class="form-control" placeholder="Search Films" name="q">
             </div>
           <% end %>
         </li>
