--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,7 +5,7 @@
   <source src="/theater/movies/<%= @movie.encodes.first.filename %>">
   </video>
 </div>
-<p>Video not playing properly? Try switching to a <a href="#player-div" onClick="switch_local_player()">local player</a>, or download the file <%= link_to "here", "/watch/#{ @movie.id }" %>.</p>
+<p>Video not playing properly? Try switching to a <a href="#player-div" onClick="switch_local_player()">local player</a>, or download the file <%= link_to "here", "/theater/movies/#{ @movie.encodes.first.filename }" %>.</p>
 
 <div class="row movie" style="padding-top:20px;">
   <div class="col-md-3">
@@ -48,7 +48,6 @@
         </table>
       </div>
     </div>
-    <%= link_to "Direct Link", "/watch/#{ @movie.id }" %>
   </div>
 </div>
 
