--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -1,5 +1,5 @@
 <h1>Search Results</h1>
 
-<p><%= "#{@results.count} results for \"#{params[:q]}" %><p>
+<p><%= "#{@results.count} results for \"#{params[:q]}\"" %><p>
 
 <%= render partial: 'movies/list', locals: {movies: @results} %>
