--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,12 +15,27 @@
   <div class="row">
     <div class="col-md-4">
       <h2>Television</h2>
+      <%= form_tag('', role: 'search') do %>
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search Television" name="q">
+        </div>
+      <% end %>
     </div>
     <div class="col-md-4">
-      <h2>Film</h2>
+      <h2>Films</h2>
+      <%= form_tag(movies_search_path, role: 'search') do %>
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search Films" name="q">
+        </div>
+      <% end %>
     </div>
     <div class="col-md-4">
       <h2>Music</h2>
+      <%= form_tag('', role: 'search') do %>
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search Music" name="q">
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
