add shows index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <p>Chose your adventure...</p>
   <div class="row">
     <div class="col-md-4">
-      <%= image_tag 'icon_5198.svg', width: '100%'  %>
+      <%= link_to image_tag('icon_5198.svg', width: '100%'), shows_path %>
     </div>
     <div class="col-md-4">
       <%= link_to image_tag('icon_1895.svg', width: '100%'), movies_path %>
