--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -1,43 +1,1 @@
-<h1>Listing shows</h1>
-
-<table>
-  <tr>
-    <th>Backdrop path</th>
-    <th>Id</th>
-    <th>Original name</th>
-    <th>First air date</th>
-    <th>Poster path</th>
-    <th>Popularity</th>
-    <th>Name</th>
-    <th>Vote average</th>
-    <th>Vote count</th>
-    <th>Overview</th>
-    <th>Folder</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @shows.each do |show| %>
-  <tr>
-    <td><%= show.backdrop_path %></td>
-    <td><%= show.id %></td>
-    <td><%= show.original_name %></td>
-    <td><%= show.first_air_date %></td>
-    <td><%= show.poster_path %></td>
-    <td><%= show.popularity %></td>
-    <td><%= show.name %></td>
-    <td><%= show.vote_average %></td>
-    <td><%= show.vote_count %></td>
-    <td><%= show.overview %></td>
-    <td><%= show.folder %></td>
-    <td><%= link_to 'Show', show %></td>
-    <td><%= link_to 'Edit', edit_show_path(show) %></td>
-    <td><%= link_to 'Destroy', show, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Show', new_show_path %>
+<%= render partial: 'shows/grid', locals: {shows: @shows, title: 'All TV Shows'} %>
