--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CaketopTheater</title>
+  <title>Caketop Theater</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -9,35 +9,51 @@
 <body>
 
   <div class="container">
+
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <%= link_to "CAKETOP THEATER", '/theater', class: "navbar-brand" %>
-      <ul class="nav navbar-nav navbar-right" style="padding-right: 25px;">
-        <li><%= link_to "Home", '/theater' %></li>
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">CAKETOP THEATER</a>
+        </div>
 
-        <li class="divider"></li>
-        <li><%= link_to "Films", movies_path %></li>
-        <% if request.original_url.include?('movies') %>
-          <li>
-            <%= form_tag(movies_search_path, class: 'navbar-form', role: 'search') do %>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search Films" name="q">
-              </div>
-            <% end %>
-          </li>
-        <% end %>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Home", '/theater' %></li>
 
-        <li class="divider"></li>
-        <li><%= link_to "TV", shows_path %></li>
-        <% if request.original_url.include?('shows') %>
-          <li>
-            <%= form_tag(shows_search_path, class: 'navbar-form', role: 'search') do %>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search TV Shows" name="q">
-              </div>
+            <li class="divider"></li>
+            <li><%= link_to "Films", movies_path %></li>
+            <% if request.original_url.include?('movies') %>
+              <li>
+                <%= form_tag(movies_search_path, class: 'navbar-form', role: 'search') do %>
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search Films" name="q">
+                  </div>
+                <% end %>
+              </li>
             <% end %>
-          </li>
-        <% end %>
-      </ul>
+
+            <li class="divider"></li>
+            <li><%= link_to "TV", shows_path %></li>
+            <% if request.original_url.include?('shows') %>
+              <li>
+                <%= form_tag(shows_search_path, class: 'navbar-form', role: 'search') do %>
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search TV Shows" name="q">
+                  </div>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
 
     <%= yield %>
